refactor(domain): List를 ArrayList로 변환
- 통일성을 위하여 List -> ArrayList로 통일